--- a/Tip_Calculator/tip_calculator.html
+++ b/Tip_Calculator/tip_calculator.html
@@ -4,7 +4,7 @@
 	
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-	<title>Tip Calculator</title>
+	<title>Tip Calculator :: GitHub</title>
 	<link rel="stylesheet" type="text/css" href="tip_calculator.css">
 	<script type="text/javascript" src="tip_calculator.js"></script>
 
